--- a/css/reset.css
+++ b/css/reset.css
@@ -1,1 +1,15 @@
 /* Base styles */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+  
+body {
+    font-weight: normal;
+    background-color: white;
+    color: black;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+}
