--- a/css/reset.css
+++ b/css/reset.css
@@ -9,7 +9,7 @@ body {
   font-weight: normal;
   background-color: white;
   color: black;
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 16px;
   line-height: 24px;
 }
