--- a/css/reset.css
+++ b/css/reset.css
@@ -14,16 +14,53 @@ body {
   line-height: 24px;
 }
 
-.container,
+.container {
+  display: grid;
+  place-items: center;
+  gap: 20px;
+  width: 100%;
+  padding: 20px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 800px;
+  border: 1px solid #BDC3C7;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
+}
+
+tr {
+  transition: all .2s ease-in;
+  cursor: pointer;
+}
+
+tbody tr:hover {
+  background-color: #f5f5f5;
+  transform: scale(1.02);
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
+}
+
+th,
+td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+#table-header {
+  background-color: #16A085;
+  color: #fff;
+}
+
+.remove-button:hover{
+  background-color: red;
+  color: #fff;
+}
+
 form {
   display: flex;
   flex-flow: column nowrap;
   gap: 10px;
-}
-
-.container {
-  width: 100%;
-  padding: 20px;
 }
 
 .book {
