--- a/css/reset.css
+++ b/css/reset.css
@@ -25,19 +25,19 @@ body {
 table {
   border-collapse: collapse;
   width: 800px;
-  border: 1px solid #BDC3C7;
-  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
+  border: 1px solid #bdc3c7;
+  box-shadow: 2px 2px 12px rgb(0 0 0 / 20%), -1px -1px 8px rgb(0 0 0 / 20%);
 }
 
 tr {
-  transition: all .2s ease-in;
+  transition: all 0.2s ease-in;
   cursor: pointer;
 }
 
 tbody tr:hover {
   background-color: #f5f5f5;
   transform: scale(1.02);
-  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 12px rgb(0 0 0 / 20%), -1px -1px 8px rgb(0 0 0 / 20%);
 }
 
 th,
@@ -48,11 +48,11 @@ td {
 }
 
 #table-header {
-  background-color: #16A085;
+  background-color: #16a085;
   color: #fff;
 }
 
-.remove-button:hover{
+.remove-button:hover {
   background-color: red;
   color: #fff;
 }
