--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -129,12 +129,21 @@ td {
 }
 
 .remove-button,
-.edit-button {
+.edit-button,
+.cancel-button {
   padding: 5px;
   cursor: pointer;
 }
 
-.remove-button:hover {
+.cancel-button {
+  width: fit-content;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.remove-button:hover,
+.cancel-button:hover {
   background-color: red;
   color: #fff;
 }
@@ -150,8 +159,9 @@ td {
 }
 
 .add-book,
+.edit-book,
 .contact-us,
-.success {
+.success-background {
   width: 800px;
   display: grid;
   place-items: center;
@@ -187,6 +197,48 @@ form {
   flex-flow: column;
 }
 
+.success-container {
+  display: none;
+  place-items: center;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 100px 25px;
+
+  /* background-color: rgba(0, 0, 0, 0.4); */
+
+  /* backdrop-filter: blur(0.6rem); */
+  z-index: 2;
+  animation: zoom 0.2s ease-in-out;
+}
+
+@keyframes zoom {
+  from { transform: scale(0); }
+  to { transform: scale(1); }
+}
+
+.pop-active {
+  display: grid;
+}
+
+.success-background {
+  background-color: #f5f5f5;
+  height: 100%;
+  padding: 50px;
+  position: relative;
+}
+
+.success {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  width: 800px;
+}
+
 .success-author {
   font: 400 20px/24px Poppins, sans-serif;
 }
@@ -203,8 +255,4 @@ footer {
   background-color: #16a085;
   color: white;
   bottom: 0;
-}
-
-.active {
-  display: block;
 }
